--- a/HalfIDE.htm
+++ b/HalfIDE.htm
@@ -172,7 +172,7 @@ param1  ccc
 
 param1  aaa  bbb  ccc
 </pre>
-<p>The IDE must preserve the order of the values of every parameter, even when they could better fit a "key → value" map, and preferably present them to the user in the given order.
+<p>The IDE must preserve the order of the values of every parameter, even when they could better fit a "key → value" map, and present them to the user in the given order when needed.
 <p>The following table lists all the parameters and the number of values they can have.
 <p>Parameters allowing zero values are non-mandatory and can be omitted if the user does not want to associate values to them. Writing the parameter's name alone with no values is equivalent to omitting it, that is both cases are equivalent to adding no values to the current list for that parameter.
 <p>Some parameters allowing zero values have a default value list, that is value(s) assumed by default if the user specifies no values.
